heapsz/tests/ui/fail-derive-unknown-attrs.stderr
error: unknown heap_size attribute `unknown`
 --> tests/ui/fail-derive-unknown-attrs.rs:8:17
  |
8 |     #[heap_size(unknown)]
  |                 ^^^^^^^
